################################################################################
#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

190409 Martin Raden :
 * IntaRNA/InteractionEnergy :
   + energyWithDangles : whether or not dangling end contributions are to be 
     considered for the overall energy computation
   * getE() :
   * getE_contributions() :
   * getE_multi() :
     + consideration of energyWithDangles
   * getE_multi() :
     + bugfix: helix end terms were missing
 * IntaRNA/InteractionEnergy* :
   * constructor() :
     + energyWithDangles handling
 * bin/CommandLineParsing :
   + energyNoDangles : whether or not dangling end terms are considered
   * getEnergyHandler() :
     * bugfix : InteractionEnergyBP constructor call

190404 Martin Raden :
 * IntaRNA/InteractionEnergy :
   * getE() :
     + additional sanity checks to avoid energy range overflows

190403 Martin Raden :
 * IntaRNA/PredictorMfe :
   * updateOptima() :
     + bugfix: explicit handling of energies >= E_MAX

190320 Martin Raden :
 * IntaRNA/PredictorMfe2dHeuristic* :
   + outNoLP support
 * tests/data :
   + tests with and without noLP
 * .travis.yml : 
   - viennarna not available via ppa anymore
   + build IntaRNA via conda
 * tests/Makefile.am :
   * switch to parallel test harness to define shell script test driver

190319 Martin Raden :
 + tests/runIntaRNA.sh : runs tests using the IntaRNA binary
 + tests/data :
   + noLP-exact 
   + noLP-exact-seed
 * IntaRNA/Predictor* :
   * predict() :
     + "outNoLP not implemented" warnings where needed
 * bin/CommandLineParsing :
   * getSeedHandler() :
     + "outNoLP not implemented" warning for SeedHandlerMfe
 * README.md :
   + outNoLP

190318 Martin Raden :
 * IntaRNA/OutputConstraint :
   + noLP : whether or not lonely (non-stacked) interaction bps are allowed
   * constructor( + noLP )